<resources>
    <string name="app_name">TimeCapsule</string>
    <string name="name_of_capsule">Name of Capsule</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="notification_title">Time Capsule</string>
    <string name="notification_description">Your time capsule is open now!</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">description</string>
    <string name="my_existing_capsules">My Existing Capsules</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_media">Add Media:</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="audio">audio</string>
    <string name="back">Back</string>
    <string name="open_on_text">Open on:</string>
    <string name="time_capsule_text">Time Capsule</string>
    <string name="upload_button_desc">button for uploading media to capsule</string>
    <string name="email_text">Email:</string>
    <string name="password_text">Password:</string>
    <string name="register_text">Register here</string>
    <string name="login_text">Log In</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="create_a_capsule_text">Create Capsule</string>
</resources>