<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:minHeight="250dp"
    android:layout_gravity="center"
    tools:context=".AddMediaDialogFragment">

    <TextView
        android:id="@+id/activity_add_media_tv_add_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_media"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/activity_add_media_ibtn_camera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="@+id/activity_add_media_ibtn_gallery"
        app:layout_constraintEnd_toStartOf="@+id/activity_add_media_ibtn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_add_media_ibtn_gallery"
        app:srcCompat="@drawable/ic_camera" />

    <ImageButton
        android:id="@+id/activity_add_media_ibtn_gallery"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_add_media_ibtn_audio"
        app:layout_constraintEnd_toStartOf="@+id/activity_add_media_ibtn_audio"
        app:layout_constraintStart_toEndOf="@+id/activity_add_media_ibtn_camera"
        app:layout_constraintTop_toTopOf="@+id/activity_add_media_ibtn_audio"
        app:srcCompat="@drawable/ic_gallery" />

    <ImageButton
        android:id="@+id/activity_add_media_ibtn_audio"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_add_media_ibtn_gallery"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_media_tv_add_media"
        app:srcCompat="@drawable/ic_mic"
        app:tint="@color/black"/>

    <TextView
        android:id="@+id/activity_add_media_tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_media_ibtn_camera"
        app:layout_constraintEnd_toEndOf="@+id/activity_add_media_ibtn_camera"
        app:layout_constraintStart_toStartOf="@+id/activity_add_media_ibtn_camera" />

    <TextView
        android:id="@+id/activity_add_media_tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/gallery"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_media_ibtn_gallery"
        app:layout_constraintEnd_toEndOf="@+id/activity_add_media_ibtn_gallery"
        app:layout_constraintStart_toStartOf="@+id/activity_add_media_ibtn_gallery" />

    <TextView
        android:id="@+id/activity_add_media_tv_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/audio"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_media_ibtn_audio"
        app:layout_constraintEnd_toEndOf="@+id/activity_add_media_ibtn_audio"
        app:layout_constraintStart_toStartOf="@+id/activity_add_media_ibtn_audio" />
</androidx.constraintlayout.widget.ConstraintLayout>