<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCapsuleActivity">


    <ImageButton
        android:id="@+id/activity_create_capsule_ibtn_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        app:srcCompat="@drawable/ic_camera" />

    <EditText
        android:id="@+id/activity_create_capsule_et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_capsule"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_capsule_et_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_capsule_ibtn_take_picture"
        app:layout_constraintVertical_bias="0.847" />

    <EditText
        android:id="@+id/activity_create_capsule_et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:maxLines="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_capsule_ibtn_take_picture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_create_capsule_fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


    <ImageView
        android:id="@+id/activity_create_capsule_img_calendar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_capsule_fab_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_capsule_et_description"
        app:srcCompat="@drawable/ic_calendar" />

    <ImageView
        android:id="@+id/activity_create_capsule_img_clock"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_capsule_img_calendar"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/activity_create_capsule_tv_choose_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/choose_a_date"
        app:layout_constraintBottom_toBottomOf="@+id/activity_create_capsule_img_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activity_create_capsule_img_calendar"
        app:layout_constraintTop_toTopOf="@+id/activity_create_capsule_img_calendar"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/activity_create_capsule_tv_choose_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/choose_a_time"
        app:layout_constraintBottom_toBottomOf="@+id/activity_create_capsule_img_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activity_create_capsule_img_clock"
        app:layout_constraintTop_toTopOf="@+id/activity_create_capsule_img_clock"
        app:layout_constraintVertical_bias="0.531" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_create_capsule_fab_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_mic" />


</androidx.constraintlayout.widget.ConstraintLayout>